# pir-player

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  main.py  python_pir_player.service
cross/: Dockerfile
src/: main.rs
