[package]
name = "pir-player"
version = "0.1.0"
authors = ["Alexander Hildebrandt <alex@hilde.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitcode = "1.1.2"
gpio = "0.4.1"
rand = "0.8.4"
rusqlite = "0.27.0"
