[package]
name = "pir-player"
version = "0.1.0"
authors = ["Alexander Hildebrandt <alex@hilde.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rusqlite/bundled"]

[dependencies]
exitcode = "1.1.2"
rand = "0.8.4"
rusqlite = "0.28.0"
sysfs_gpio = "0.6.1"
